# timui

./: Cargo.toml  rustfmt.toml  tests.sh  watch.sh
examples/: macros.rs
exs/: basic.rs  macros.rs
src/: main.rs  main_tree.rs
src/lib/: attributes.rs  component.rs  element.rs  layout.rs  mod.rs  render.rs  style.rs  ui.rs  view.rs
src/lib/component/: component.rs  context.rs  element.rs  layout.rs  mod.rs  style.rs
src/lib/components/: char.rs  character.rs  mod.rs
src/lib/layout/: layout.rs  layout_node.rs  mod.rs
src/lib/macros/: component.rs  element.rs  mod.rs  view.rs
src/lib/paint/: canvas.rs  cell.rs  layer.rs  mod.rs  paint.rs  rect.rs  uniform.rs
src/lib/style/: color.rs  color_macro.rs  color_style.rs  color_style_inherit.rs  color_style_inherited.rs  layout_style.rs  mod.rs  style.rs  style_macro.rs
src/lib/ui/: mod.rs  ui.rs  ui_element.rs  ui_node.rs
src/lib/utils/: mod.rs  rect.rs  tree.rs
