[package]
name = "timui"
version = "0.1.0"
authors = ["Romain TRUCHI <romain.truchi.06@gmail.com>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib/mod.rs"

[dependencies]
termion = "1.5.5"
stretch = "0.3.2"
textwrap = { git = "https://github.com/mgeisler/textwrap" }
# textwrap = "0.12"
paste = "0.1"

[dev-dependencies]
pretty_assertions = "0.6.1"
